Creating standard project_tests.sh, Jenkinsfile and build/junit.xml

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,4 +16,8 @@
         </whitelist>
     </filter>
 
+    <logging>
+        <log type="junit" target="build/junit.xml" />
+    </logging>
+
 </phpunit>
