Adding PHPSpec XML log

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,7 +17,7 @@
     </filter>
 
     <logging>
-        <log type="junit" target="build/junit.xml" />
+        <log type="junit" target="build/phpunit.xml" />
     </logging>
 
 </phpunit>
