--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     "suggest": {
         "guzzlehttp/guzzle": "^6.0, to use the Guzzle6HttpClient adapter",
         "mtdowling/jmespath.php": "^2.0, to use the Result::search() method",
-        "psr/log": "^1.0, to use the WarningCheckingHttpClient adapter"
+        "psr/log": "^1.0, to use the WarningCheckingHttpClient adapter",
+        "monolog/monolog": "^1.0, to use the HttpMessageProcessor log processor"
     },
     "extra": {
         "branch-alias": {
