Testing random sequences of send and waits
This rather complex code generates sequences of requests that are sent,
alternated with waits on the promises returned.
```
int(32)
array(132) {
  [0]=>
  array(2) {
    ["action"]=>
    string(4) "send"
    ["what"]=>
    int(0)
  }
  [1]=>
  array(2) {
    ["action"]=>
    string(4) "send"
    ["what"]=>
    int(1)
  }
  [2]=>
  array(2) {
    ["action"]=>
    string(4) "send"
    ["what"]=>
    int(2)
  }
  [3]=>
  array(2) {
    ["action"]=>
    string(4) "send"
    ["what"]=>
    int(3)
  }
  [4]=>
  array(2) {
    ["action"]=>
    string(4) "send"
    ["what"]=>
    int(4)
  }
  ...
  [16]=>
  array(2) {
    ["action"]=>
    string(4) "wait"
    ["what"]=>
    int(13)
  }
  ...
```

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "phpspec/phpspec": "^2.4",
         "phpspec/prophecy": "^1.5",
         "phpunit/phpunit": "^5.2",
-        "psr/log": "^1.0"
+        "psr/log": "^1.0",
+        "giorgiosironi/eris": "^0.8.0"
     },
     "suggest": {
         "guzzlehttp/guzzle": "^6.0, to use the Guzzle6HttpClient adapter",
