--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "crell/api-problem": "^2.0",
         "guzzlehttp/promises": "^1.0",
         "guzzlehttp/psr7": "^1.0",
+        "ocramius/package-versions": "^1.0",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
