--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "phpspec/phpspec": "^2.4",
         "phpspec/prophecy": "^1.5",
         "phpunit/phpunit": "^5.7.1",
+        "sebastian/exporter": "^2.0.0",
         "psr/log": "^1.0"
     },
     "suggest": {
