--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "phpspec/phpspec": "^2.4",
         "phpspec/prophecy": "^1.10",
         "phpunit/phpunit": "^5.2",
-        "psr/log": "^1.0"
+        "psr/log": "^1.0",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "suggest": {
         "guzzlehttp/guzzle": "^6.0, to use the Guzzle6HttpClient adapter",
