--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -3,6 +3,7 @@
     <exclude-pattern>*.css$</exclude-pattern>
     <exclude-pattern>*.js$</exclude-pattern>
     <rule ref="PSR2">
+        <exclude name="Generic.Functions.FunctionCallArgumentSpacing" />
         <exclude name="Squiz.Functions.MultiLineFunctionDeclaration" />
         <exclude name="PSR1.Classes.ClassDeclaration" />
         <exclude name="PSR1.Methods.CamelCapsMethodName" />
