--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
     "require": {
         "php": "^7.0",
         "beberlei/assert": "^2.2",
+        "composer/package-versions-deprecated": "1.11.99.2",
         "crell/api-problem": "^2.0",
         "guzzlehttp/promises": "^1.0",
         "guzzlehttp/psr7": "^1.0",
-        "ocramius/package-versions": "^1.0",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
