--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     },
     "require": {
-        "php": "7.0 || 8.0",
+        "php": "^7.0 || ^8.0",
         "beberlei/assert": "^2.2",
         "composer/package-versions-deprecated": "1.11.99.2",
         "crell/api-problem": "^2.0",
