--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,14 @@
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "giorgiosironi/eris": "^0.8",
         "guzzlehttp/guzzle": "^6.0",
         "mtdowling/jmespath.php": "^2.0",
         "phpspec/phpspec": "^2.4",
         "phpspec/prophecy": "^1.10",
         "phpunit/phpunit": "^5.2",
         "psr/log": "^1.0",
-        "squizlabs/php_codesniffer": "^3.5"
+        "squizlabs/php_codesniffer": "^3.5",
+        "giorgiosironi/eris": "^0.12.1"
     },
     "suggest": {
         "guzzlehttp/guzzle": "^6.0, to use the Guzzle6HttpClient adapter",
