--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -3,25 +3,40 @@ name: PHP CI
 on: push
 
 jobs:
-  php:
+  php7.1:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        php-version: ['7.1', '8.0']
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Setup PHP ${{ matrix.php-version }}
+    - name: Setup PHP 7.1
       uses: shivammathur/setup-php@v2
       with:
-        php-version: ${{ matrix.php-version }}
         coverage: pcov # (optional) enable code coverage
+        php-version: 7.1
 
     - name: Install dependencies
-      run: composer install
+      run: composer install --no-interaction
 
     - name: Run tests
       run: vendor/bin/phpunit
+
+  php8.0:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup PHP 8.0
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.0
+          coverage: pcov # (optional) enable code coverage
+
+      - name: Install dependencies
+        run:  composer install --no-interaction && composer require phpunit/phpunit:^7.3
+
+      - name: Run tests
+        run: vendor/bin/phpunit
