--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     },
     "require": {
-        "php": "^7.1 || ^8.0",
+        "php": "^7.1.0 || ^8.0",
         "beberlei/assert": "^2.2",
         "composer/package-versions-deprecated": "1.11.99.2",
         "crell/api-problem": "^3.6",
@@ -26,9 +26,9 @@
     "require-dev": {
         "guzzlehttp/guzzle": "^6.0",
         "mtdowling/jmespath.php": "^2.0",
-        "phpspec/phpspec": "^2.4",
+        "phpspec/phpspec": "^5.1 || ^6.3",
         "phpspec/prophecy": "^1.10",
-        "phpunit/phpunit": "^8.5.33",
+        "phpunit/phpunit": "^7.5 || ^8.5 || ^9.6",
         "psr/log": "^1.0",
         "squizlabs/php_codesniffer": "^3.5",
         "giorgiosironi/eris": "^0.12.1"
