--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,7 @@
         "phpspec/prophecy": "^1.10",
         "phpunit/phpunit": "^7.5 || ^8.5 || ^9.6",
         "psr/log": "^1.0",
-        "squizlabs/php_codesniffer": "^3.5",
-        "giorgiosironi/eris": "^0.12.1"
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "suggest": {
         "guzzlehttp/guzzle": "^6.0, to use the Guzzle6HttpClient adapter",
