--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": "^7.1.0 || ^8.0",
-        "beberlei/assert": "^3.3",
+        "beberlei/assert": "^2.9 || ^3.3",
         "composer/package-versions-deprecated": "1.11.99.2",
         "crell/api-problem": "^3.6",
         "guzzlehttp/promises": "^1.0",
