--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,9 @@
     "require-dev": {
         "guzzlehttp/guzzle": "^6.0",
         "mtdowling/jmespath.php": "^2.0",
-        "phpspec/phpspec": "^5.1 || ^7.1",
+        "phpspec/phpspec": ">=5.1",
         "phpspec/prophecy": "^1.10",
-        "phpunit/phpunit": "^7.5 || ^8.5 || ^9.6",
+        "phpunit/phpunit": ">=7.5",
         "psr/log": "^1.0",
         "squizlabs/php_codesniffer": "^3.5"
     },
