--- a/composer.json
+++ b/composer.json
@@ -15,23 +15,22 @@
         }
     },
     "require": {
-        "php": "^7.0",
-        "beberlei/assert": "^2.2",
+        "php": "^7.1",
+        "beberlei/assert": ">=2.2",
         "composer/package-versions-deprecated": "1.11.99.2",
-        "crell/api-problem": "^2.0",
+        "crell/api-problem": "^3.6",
         "guzzlehttp/promises": "^1.0",
         "guzzlehttp/psr7": "^1.0",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "giorgiosironi/eris": "^0.8",
         "guzzlehttp/guzzle": "^6.0",
         "mtdowling/jmespath.php": "^2.0",
-        "phpspec/phpspec": "^2.4",
+        "phpspec/phpspec": "^5.1 || ^6.3 || ^7.5",
         "phpspec/prophecy": "^1.10",
-        "phpunit/phpunit": "^5.2",
+        "phpunit/phpunit": "^7.5.20 || ^8.5 || ^9.6 || ^10.2",
         "psr/log": "^1.0",
-        "squizlabs/php_codesniffer": "^3.5"
+        "squizlabs/php_codesniffer": "^3.10"
     },
     "suggest": {
         "guzzlehttp/guzzle": "^6.0, to use the Guzzle6HttpClient adapter",
