--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     },
     "require": {
-        "php": "^7.1",
+        "php": "^7.1 || ^8.0",
         "beberlei/assert": ">=2.2",
         "composer/package-versions-deprecated": "1.11.99.2",
         "crell/api-problem": "^3.6",
@@ -24,7 +24,7 @@
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "guzzlehttp/guzzle": "^6.0",
+        "guzzlehttp/guzzle": "^6.0 || ^7.0",
         "mtdowling/jmespath.php": "^2.0",
         "phpspec/phpspec": "^5.1 || ^6.3 || ^7.5",
         "phpspec/prophecy": "^1.10",
