--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "composer/package-versions-deprecated": "1.11.99.2",
         "crell/api-problem": "^3.6",
         "guzzlehttp/promises": "^1.0",
-        "guzzlehttp/psr7": "^1.0",
+        "guzzlehttp/psr7": "^1.0 || ^2.8",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
